--- a/public/index.html
+++ b/public/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
   <head>
     <!-- Meta Information -->
+    <meta name='viewport' content='width=device-width, initial-scale=1.0, maximum-scale=1.0' />
     <title>Tweeter - Home Page</title>
 
     <!-- External CSS -->
@@ -29,13 +30,13 @@
 
     <header>
       <div>
-          <img src="/images/profile-hex.png"> 
+          <img src="/images/avatar-img.png"> 
       </div>
       <br>
       <div>
-          <h2>Your Name</h2>
+          <h2>Kurosaki Ichigo</h2>
       </div>
-  </header>
+    </header>
 
     <!-- Page-specific (main) content here -->
     <main class="container">
